added openss script

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,8 +22,8 @@ http {
         listen 8880;
         listen 8443 ssl;
 
-        ssl_certificate /home/www-data/nginx-selfsigned.crt;
-        ssl_certificate_key /home/www-data/nginx-selfsigned.key;
+        ssl_certificate /home/www-data/certificate.crt;
+        ssl_certificate_key /home/www-data/privateKey.pem;
 
         access_log /tmp/access.log;
         error_log /tmp/error.log;
